Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61774

tst_Bic doesn't cover all modules

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.10.0 Alpha
    • 5.10.0 Alpha
    • GUI: OpenGL
    • None
    • f2fea571b9e17dc31eff349f6b744603c670dcd6

    Description

      https://codereview.qt-project.org/#/c/196374/
      https://testresults.qt.io/coin/integration/qt/qtbase/tasks/1499097715
      https://testresults.qt.io/logs/qt/qtbase/e80f6c195e9a410e00737cdc26559d945373cec6/LinuxopenSUSE_42_1x86_64LinuxopenSUSE_42_1x86_64GCCqtci-linux-openSUSE-42.1-x86_64-5702dbDeveloperBuild_NoPch/7ca30f915833d953146007e71743147e3e719500/test_1499097759/testlog.txt.gz

      /home/qt/work/qt/qtqa-latest/tests/postbuild/bic/target_wrapper.sh  ./tst_bic sizesAndVTables
       ********* Start testing of tst_Bic *********
       Config: Using QtTest library 5.10.0, Qt 5.10.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 4.8.5)
       WARNING: tst_Bic::initTestCase() This test needs the correct qmake in PATH, we need it to generate INCPATH for qt modules.
          Loc: [tst_bic.cpp(336)]
       QDEBUG : tst_Bic::initTestCase() [     0.000 D] default qt_tests_shared_global_get_modules - modules keys: ("QtOpenGL", "QtWidgets", "QtGui", "QtTest", "QtConcurrent", "QtSql", "QtNetwork", "QtDBus", "QtXml", "QtCore", "QtPrintSupport")
       QDEBUG : tst_Bic::initTestCase() [     0.000 D] default qt_tests_shared_global_get_modules - modules values: ("opengl", "widgets", "gui", "testlib", "concurrent", "sql", "network", "dbus", "xml", "core", "printsupport")
       QDEBUG : tst_Bic::initTestCase() [     0.046 D] default tst_Bic::initTestCase - 
       Binary  : ./tst_bic
       Built   : Jul  3 2017
       QTDIR   : 
       QT_MODULE_TO_TEST: /home/qt/work/qt/qtbase
       qmake   : /home/qt/work/install/bin/qmake
       
       Compiler: g++ 4.8
       g++ (SUSE Linux) 4.8.5
       Copyright (C) 2015 Free Software Foundation, Inc.
       This is free software; see the source for copying conditions.  There is NO
       warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
       
       
       Arguments: -c -I/home/qt/work/qt/qtbase/tests/global -I/home/qt/work/install/include -I/home/qt/work/install/include/QtOpenGL -I/home/qt/work/install/include/QtPrintSupport -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtTest -I/home/qt/work/install/include/QtConcurrent -I/home/qt/work/install/include/QtSql -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I/home/qt/work/qt/qtbase/tests/global/.moc -I/home/qt/work/qt/qtbase/mkspecs/linux-g++ -I/usr/X11R6/include/ -DQT_NO_STL -xc++ -o /dev/null -fdump-class-hierarchy -std=c++11 -fPIC
       
       File suffix: linux-gcc-amd64
       
       
       PASS   : tst_Bic::initTestCase()
       PASS   : tst_Bic::sizesAndVTables(QtOpenGL:5.0)
       PASS   : tst_Bic::sizesAndVTables(QtOpenGL:5.1)
       PASS   : tst_Bic::sizesAndVTables(QtOpenGL:5.2)
       PASS   : tst_Bic::sizesAndVTables(QtOpenGL:5.3)
       PASS   : tst_Bic::sizesAndVTables(QtOpenGL:5.4)
       SKIP   : tst_Bic::sizesAndVTables(QtOpenGL:5.5) No platform spec found for this platform/version - /home/qt/work/qt/qtbase/tests/auto/bic/data/QtOpenGL.5.5.0.linux-gcc-amd64.txt not found.
          Loc: [tst_bic.cpp(523)]
       QWARN  : tst_Bic::sizesAndVTables(QtOpenGL:5.6) [     4.399 W] default tst_Bic::sizesAndVTables - size mismatch for "QOpenGLExtraFunctionsPrivate" old 2528 new 2880
       FAIL!  : tst_Bic::sizesAndVTables(QtOpenGL:5.6) Test failed, read warnings above.
          Loc: [tst_bic.cpp(593)]
       QWARN  : tst_Bic::sizesAndVTables(QtOpenGL:5.7) [     4.580 W] default tst_Bic::sizesAndVTables - size mismatch for "QOpenGLExtraFunctionsPrivate::Functions" old 1376 new 1728
       QWARN  : tst_Bic::sizesAndVTables(QtOpenGL:5.7) [     4.580 W] default tst_Bic::sizesAndVTables - size mismatch for "QOpenGLExtraFunctionsPrivate" old 2528 new 2880
       FAIL!  : tst_Bic::sizesAndVTables(QtOpenGL:5.7) Test failed, read warnings above.
          Loc: [tst_bic.cpp(593)]
       QWARN  : tst_Bic::sizesAndVTables(QtOpenGL:5.8) [     4.762 W] default tst_Bic::sizesAndVTables - size mismatch for "QOpenGLExtraFunctionsPrivate::Functions" old 1376 new 1728
       QWARN  : tst_Bic::sizesAndVTables(QtOpenGL:5.8) [     4.762 W] default tst_Bic::sizesAndVTables - size mismatch for "QOpenGLExtraFunctionsPrivate" old 2528 new 2880
       FAIL!  : tst_Bic::sizesAndVTables(QtOpenGL:5.8) Test failed, read warnings above.
          Loc: [tst_bic.cpp(593)]
       SKIP   : tst_Bic::sizesAndVTables(QtOpenGL:5.9) No platform spec found for this platform/version - /home/qt/work/qt/qtbase/tests/auto/bic/data/QtOpenGL.5.9.0.linux-gcc-amd64.txt not found.
          Loc: [tst_bic.cpp(523)]
       PASS   : tst_Bic::cleanupTestCase()
       Totals: 7 passed, 3 failed, 2 skipped, 0 blacklisted, 4764ms
       ********* Finished testing of tst_Bic *********
       Makefile:272: recipe for target 'check' failed
       make: *** [check] Error 3
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Eddy Edward Welbourne
              liaqi Liang Qi
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: